# measured-vs-ai

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-extensions.txt  requirements.txt  run_all.py  run_benchmark_boosting.py  run_postprocess.py  run_predict.py  run_sensitivity.py  run_shap.py  run_train.py  run_train_smoke.py
configs/: cv10.yaml  default.yaml  deployable.yaml  lopo15.yaml  paper_reproduction_v4_best.yaml  smoke.yaml
data/cleaned/: cpt_vs_labeled.csv  cpt_vs_labeled.parquet  cpt_vs_unlabeled.parquet  data_dictionary.csv  groups_summary.csv
docs/results_snapshot/: specialist_weights_best_run.json  subset_metrics_best_run.csv  summary_metrics_best_run.csv
outputs/20260320_214747_specialist_profile_ensemble_smoke/: config_used.yaml
outputs/20260320_214747_specialist_profile_ensemble_smoke/models/: empirical_baseline.joblib  metadata.json  scpt_specialist.joblib  tertiary_specialist.joblib
outputs/20260320_214747_specialist_profile_ensemble_smoke/predictions/: cv_predictions.csv  labeled_fitted_predictions.csv
outputs/20260320_214747_specialist_profile_ensemble_smoke/reports/: base_weights.json  feature_importance_extra_trees_profile.csv  feature_importance_random_forest_profile.csv  (+5 more)
outputs/20260429_102226_specialist_profile_ensemble_final/: config_used.yaml
outputs/20260429_102329_sensitivity_thr325_maxblend0p65/: config_used.yaml
outputs/20260429_102343_sensitivity_thr325_maxblend0p8/: config_used.yaml
outputs/20260429_102439_sensitivity_thr375_maxblend0p65/: config_used.yaml
scripts/: make_paper_figures.py
(+133 files in other folders)
