[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "measured-vs-ai-final-repo"
version = "0.1.0"
description = "Specialist profile ensemble models for CPT-based measured Vs estimation"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
